--- a/src/main/resources/pagecontent_ru.properties
+++ b/src/main/resources/pagecontent_ru.properties
@@ -1,7 +1,7 @@
 #Locale ru-RU
 
-nav.requests = ???????
-nav.conferences = ???????????
-nav.conference = ???????????
-nav.section = ??????
-nav.create = ???????
+nav.requests = Запросы
+nav.conferences = Конференции
+nav.conference = Конференция
+nav.section = Секция
+nav.create = Создать
