--- a/src/main/resources/pagecontent_ru.properties
+++ b/src/main/resources/pagecontent_ru.properties
@@ -1,5 +1,12 @@
 #Locale ru-RU
 
+login.welcome = Пожалуйста войдите
+login.login = Логин
+login.password = Пароль
+login.signin = Войти
+login.notregistered = Не зарегистрированы
+login.create-account = Создать аккаунт
+
 nav.requests = Запросы
 nav.conferences = Конференции
 nav.conference = Конференция
